# sf-train

./: .gitignore  LICENSE  README.md  best.pt  pyproject.toml  run.py
sf_train/: __init__.py  _data.py  _loss.py  _lstm_model.py  _model.py  _model_config.py  _train.py  _train_config.py  _trainer.py  util.py
